# rust-cli

./: Cargo.toml  test.txt
src/: main.rs
