[package]
name = "grrs"
version = "0.1.0"
edition = "2018"
description = "A tool to search inside a file"
license = "MIT"
homepage = "https://github.com/satyvm/rust-cli"
repository = "https://github.com/satyvm/rust-cli"
keywords = ["cli", "search", "demo"]
categories = ["command-line-utilities"]

[dependencies]
clap = { version = "4.5.9", features = ["derive"] }
anyhow = "1.0.86"
log = "0.4.22"
